--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,20 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
+
+
     <%= render 'layouts/header' %>
 
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
-    </div>
+
     <%= render 'layouts/footer' %>
+
+    </div>
+
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
